Fix where to upload code (github instead of gitlab)
Signed-off-by: Sergio Arroutbi <sergio.arroutbi@urjc.es>

--- a/session2/000-session2.tex
+++ b/session2/000-session2.tex
@@ -518,7 +518,7 @@ The only way to learn debugging is by debugging programs!
 
 \textbf{Before starting}:
 \begin{itemize}
-\item Make sure Session 1 exercises are uploaded to GitLab
+\item Make sure Session 1 exercises are uploaded to Github
 \item Create S02/ folder for Session 2 exercises
 \item Practice step by step execution
 \end{itemize}
@@ -674,7 +674,7 @@ Resume & F9 & Continue to next \\
   \item fiboN.py (Exercise 2)
   \item fibo-sumN.py (Exercise 3)
   \end{itemize}
-\item Everything uploaded to GitLab
+\item Everything uploaded to Github
 \end{itemize}
 
 \end{frame}
