Add Github CI documentation generation
Signed-off-by: Sergio Arroutbi <sergio.arroutbi@urjc.es>

--- a/session7/000-session7.tex
+++ b/session7/000-session7.tex
@@ -68,7 +68,7 @@ showstringspaces=false
 \title[\asignatura]{\asignatura}
 \subtitle{\grado}
 \author{URJC}
-\institute{Universidad Rey Juan Carlos}
+\institute{GSyC}
 \date{Course \curso}
 
 \AtBeginSection[]
