--- a/session2/000-session2.tex
+++ b/session2/000-session2.tex
@@ -68,7 +68,7 @@ showstringspaces=false
 \title[\asignatura]{\asignatura}
 \subtitle{\grado}
 \author{URJC}
-\institute{Universidad Rey Juan Carlos}
+\institute{GSyC}
 \date{Course \curso}
 
 \AtBeginSection[]
