--- a/session5/000-session5.tex
+++ b/session5/000-session5.tex
@@ -68,7 +68,7 @@ showstringspaces=false
 \title[\asignatura]{\asignatura}
 \subtitle{\grado}
 \author{URJC}
-\institute{Universidad Rey Juan Carlos}
+\institute{GSyC}
 \date{Course \curso}
 
 \AtBeginSection[]
